--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
-<html>
-  <h2>
-    hallo saya candra
-  </h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Belajar Tag Div</title>
+</head>
+<body>
+    <div id="header">
+        <h1>ISIKU</h1>
+        <img src="c:\Users\Asusw\Documents\New folder\garuda.jfif" />
+    </div>
+
+    <div id="menu">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+
+    <div id="content">
+        <div id="article_1">
+            <p>......Isi dari artikel......</p>
+        </div>
+    </div>
+
+    <div id="sidebar">
+        <h1>Artikel Terbaru</h1>
+           <ul>
+               <li><a href="#">Link 1</a></li>
+               <li><a href="#">Link 2</a></li>
+           </ul>
+    </div
+
+    <div id="footer">
+        <p>Footer - Copyright Pem WEB UNIPDU 2019</p>
+    </div>
+    
+</body>
 </html>
